Subdivision: EEVEE/Workbench with GPU option uses viewport level instead of render #94918

Closed
opened 2022-01-14 20:22:53 +01:00 by Garek · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon HD 7800 Series ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.20903.8001

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-11 23:26, hash: ef5d01d98f
Worked: (newest version of Blender that worked as expected)

Short description of error
When rendering EEVEE/Workbench with Subdivision modifier and GPU Subdivision option checked in preferences, render shows subdivision level used for viewport instead of render.

Exact steps for others to reproduce the error

  1. Open attached file.
  2. Make sure you have GPU Subdivision option disabled.
  3. {key F12}.
  4. Check GPU Subdivision option.
  5. {key F12}.
    Subdiv EEVEE Workbench level viewport render.blend
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon HD 7800 Series ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.20903.8001 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-11 23:26, hash: `ef5d01d98f` Worked: (newest version of Blender that worked as expected) **Short description of error** When rendering EEVEE/Workbench with Subdivision modifier and GPU Subdivision option checked in preferences, render shows subdivision level used for viewport instead of render. **Exact steps for others to reproduce the error** 1. Open attached file. 2. Make sure you have `GPU Subdivision` option disabled. 3. {key F12}. 4. Check `GPU Subdivision` option. 5. {key F12}. [Subdiv EEVEE Workbench level viewport render.blend](https://archive.blender.org/developer/F12805565/Subdiv_EEVEE_Workbench_level_viewport_render.blend)
Author

Added subscriber: @Garek

Added subscriber: @Garek

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @kevindietrich, @deadpin

Added subscribers: @kevindietrich, @deadpin

CC @kevindietrich - This one is somewhat different than the Cycles behavior, maybe an easier fix here.

CC @kevindietrich - This one is somewhat different than the Cycles behavior, maybe an easier fix here.

This issue was referenced by 9664cc91f3

This issue was referenced by 9664cc91f338e34de3a4bd826cd62f73885b5149

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-15 01:37:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94918
No description provided.