Fix T94918: GPU subdivision uses viewport levels for final render

The resolution for the subdivision grid traversal was always based on
the viewport setting.